# cloth_analyzer

./: .gitignore  Dockerfile  pyproject.toml  setup.cfg
api/: server.py
cli/: train.py
data/: dataloaders.py  pipeline.py  sample.py
data/generator/: augmenter.py  generator.py
data/ingestion/: base_loader.py  chat_transcripts.py
data/preprocessing/: preprocessing.py
data/processing/: cleaning.py  feature_engineer.py  tokenization.py
data/scripts/: data_augmentation.py  dataset_analysis.py  generate_synthetic_data.py  validate_inputs.py
data/tests/: test_processing.py  test_synthetic.py  test_validation.py
data/tokenization/: cleaning.py  tokenization.py
data/validation/: quality_checker.py  schema_validator.py
deployment/: export_onnx.py  onnx_utils.py
evaluation/: evaluation.py
evaluation/benchmarks/hardware/: hardware_profiler.py
evaluation/benchmarks/latency/: inference_timer.py
evaluation/metrics/: bias.py  classification.py  composite.py  sentiment.py
load_testing/: locustfile.py
models/: architecture.py
models/architecture/: model.py
models/components/: attention.py  heads.py
models/pretrained/: load_pretrained.py
models/trained/: trained_model.py
models/training/: calculate_class_weights.py  train.py
monitoring/: dashboard.py
pipelines/: data_pipeline.py  pipeline.py  training_pipeline.py
requirements/: dev-requirements.txt  onnx-requirements.txt  requirements.txt
scripts/: verify-script.py
training/: engine.py  loss.py  metrics.py
training/utils/: callbacks.py  loggers.py
tuning/: hyperparameter_optimization.py
(+13 files in other folders)
