[project]
name = "clothing-preference-analyzer"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "fastapi>=0.108.0"
]

[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''