[metadata]
name = clothing-preference-analyzer
version = 0.1.0
description = Machine learning system for analyzing clothing preferences
long_description = file: README.md
long_description_content_type = text/markdown
author = Raden Cedricl Dosel
author_email = raden.dosel00@gmail.com
license = Apache-2.0
url = https://github.com/yourusername/clothing-preference-analyzer
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.9
install_requires =
    -r requirements/base.txt
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False

[options.extras_require]
dev = -r requirements/dev.txt
onnx = -r requirements/onnx.txt
gpu = -r requirements/gpu.txt

[options.packages.find]
where = src
exclude =
    tests
    experiments
    notebooks

[options.entry_points]
console_scripts =
    cpa-train = training.cli:main
    cpa-serve = api.server:main
    cpa-data = data.pipeline:cli